--- a/SolidNavigation/SolidNavigation.Windows/CommentsPage.xaml
+++ b/SolidNavigation/SolidNavigation.Windows/CommentsPage.xaml
@@ -1,15 +1,21 @@
-﻿<solidNavigation:PageBase
-    x:Class="SolidNavigation.TaskDetailsPage"
+﻿<local:PageBase
+    x:Class="SolidNavigation.CommentsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:SolidNavigation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:solidNavigation="using:SolidNavigation"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text="{Binding Task.Title}" Style="{StaticResource HeaderTextBlockStyle}"  
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50" />
+            <RowDefinition Height="50" />
+        </Grid.RowDefinitions>
+        <TextBlock Text="Comments for task: " Style="{StaticResource HeaderTextBlockStyle}"/>
+        <TextBlock Grid.Row="1" Text="{Binding Task.Title}" Style="{StaticResource HeaderTextBlockStyle}"  
                         IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Top" />
-        <Button Content="Show Comments" Click="ButtonBase_OnClick" />
+
+
     </Grid>
-</solidNavigation:PageBase>
+</local:PageBase>
