--- a/SolidNavigation/SolidNavigation.Shared/MasterView.xaml
+++ b/SolidNavigation/SolidNavigation.Shared/MasterView.xaml
@@ -6,23 +6,18 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="500">
 
-    <Grid Margin="60">
+    <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Button Margin="30" Click="BackButton_OnClick" FontSize="30" Width="200" Content="Back"/>
-        <TextBox x:Name="AddressBox" Text="solidnavigation://tasks/2/comments?id=324" FontSize="30" Margin="30" Grid.Column="1" />
-        <Button Width="200" Click="OnGoClick" Content="Go" FontSize="30" Grid.Column="2" Margin="30"/>
-        <TextBlock x:Name="NavInfo" FontSize="20" Margin="30" Grid.Row="1" Grid.Column="1"/>
-        <Frame x:Name="ContentFrame" Grid.Row="2" Margin="30" Grid.ColumnSpan="3"></Frame>
+        <Frame x:Name="ContentFrame" />
+        <StackPanel Background="Green" Grid.Column="1" Orientation="Vertical">
+            <TextBox x:Name="AddressBox" Text="solidnavigation://tasks/2/comments?id=324" FontSize="20" Margin="30" Width="600" />
+            <Button Width="200" Margin="30,0,0,0" Click="OnGoClick" Content="Go" FontSize="20"/>
+            <TextBlock x:Name="NavInfo" FontSize="20" Margin="30" />
+        </StackPanel>
     </Grid>
 </UserControl>
