--- a/SolidNavigation/SolidNavigation.Windows/CommentsPage.xaml
+++ b/SolidNavigation/SolidNavigation.Windows/CommentsPage.xaml
@@ -7,15 +7,19 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="50" />
-            <RowDefinition Height="50" />
+            <RowDefinition Height="140"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="Comments for task: " Style="{StaticResource HeaderTextBlockStyle}"/>
-        <TextBlock Grid.Row="1" Text="{Binding Task.Title}" Style="{StaticResource HeaderTextBlockStyle}"  
-                        IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Top" />
-
-
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Button Margin="39,59,39,0" Click="OnBackButtonClick" Style="{StaticResource NavigationBackButtonNormalStyle}" VerticalAlignment="Top" />
+            <TextBlock Text="{Binding Task.Title}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
+        </Grid>
     </Grid>
 </local:PageBase>
