--- a/SolidNavigation/SolidNavigation.Windows/TaskDetailsPage.xaml
+++ b/SolidNavigation/SolidNavigation.Windows/TaskDetailsPage.xaml
@@ -7,9 +7,19 @@
     xmlns:solidNavigation="using:SolidNavigation"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text="{Binding Task.Title}" Style="{StaticResource HeaderTextBlockStyle}"  
-                        IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Top" />
-        <Button Content="Show Comments" Click="ButtonBase_OnClick" />
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="140"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Button Margin="39,59,39,0" Click="OnBackButtonClick" Style="{StaticResource NavigationBackButtonNormalStyle}" VerticalAlignment="Top" />
+            <TextBlock Text="{Binding Task.Title}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
+        </Grid>
+        <Button Content="Show Comments" Grid.Row="1" VerticalAlignment="Top" Margin="120,0,0,0" Click="OnCommentsButtonClick" />
     </Grid>
 </solidNavigation:PageBase>
