--- a/SolidNavigation/SolidNavigation.Windows/ListsPage.xaml
+++ b/SolidNavigation/SolidNavigation.Windows/ListsPage.xaml
@@ -11,6 +11,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="140"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid>
             <Grid.ColumnDefinitions>
@@ -28,5 +29,8 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        <StackPanel Grid.Row="2" Background="Green">
+            <TextBlock x:Name="NavInfo" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20" Margin="30" />
+        </StackPanel>
     </Grid>
 </solidNavigation:PageBase>
