--- a/SolidNavigation/SolidNavigation.Windows/TaskDetailsPage.xaml
+++ b/SolidNavigation/SolidNavigation.Windows/TaskDetailsPage.xaml
@@ -11,6 +11,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="140"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid>
             <Grid.ColumnDefinitions>
@@ -21,6 +22,21 @@
             <TextBlock Text="{Binding Task.Title}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
         </Grid>
         <TextBlock Grid.Row="1" Style="{StaticResource BodyTextBlockStyle}" Margin="120,0,0,0" FontSize="20" Text="{Binding Comment}"/>
-        <Button Content="Show Comments" Grid.Row="1" VerticalAlignment="Top" Visibility="{Binding ShowCommentsVisibility}" Margin="120,0,0,0" Click="OnCommentsButtonClick" />
+        <ListView Margin="120,0,0,0" Grid.Row="1" ItemsSource="{Binding Comments}" SelectedItem="{Binding SelectedComment, Mode=TwoWay}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Vertical" Width="400">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Comment " Style="{StaticResource BodyTextBlockStyle}" FontSize="30" Margin="10" />
+                            <TextBlock Text="{Binding CommentId}" Style="{StaticResource BodyTextBlockStyle}" FontSize="30" Margin="10"  />
+                        </StackPanel>
+                        <TextBlock Text="Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah Blah blah blah" Style="{StaticResource BodyTextBlockStyle}" FontSize="30" Margin="10" />
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <StackPanel Grid.Row="2" Background="Green">
+            <TextBlock x:Name="NavInfo" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="20" Margin="30" />
+        </StackPanel>
     </Grid>
 </solidNavigation:PageBase>
